Closes #7343 - Fixed an oversight that caused the top of form dialogs to be scrolled out of view by default. - Fixed approach to vertical centering for `-fit` type confirmation dialogs. - Reduced size of confirmation dialog icons. - Smoke tested in Chrome mobile emulator in a large variety of mobile viewport sizes and orientations.

--- a/src/api/overlays/components/dialog-component.scss
+++ b/src/api/overlays/components/dialog-component.scss
@@ -8,16 +8,14 @@
 .c-message {
   display: flex;
   align-items: center;
-  body.mobile & { // Centers confirmation dialog on screen.
-    margin-top: 40vh; 
-  }
+
   > * + * {
     margin-left: $interiorMarginLg;
   }
 
   &__icon {
     // Holds a background SVG graphic
-    $s: 80px;
+    $s: 50px;
     flex: 0 0 auto;
     min-width: $s;
     min-height: $s;
